# advent-of-code-2022

./: readme.md
01/: Cargo.toml
01/src/: part1.rs  part2.rs  part2_unsafe.rs  part2_unsafe_libc.rs
02/: Cargo.toml
02/src/: part1.rs  part2.rs
03/: Cargo.toml
03/src/: part1.rs  part2.rs
04/: Cargo.toml
04/src/: part1.rs  part2.rs
05/: Cargo.toml
05/src/: part1.rs  part2.rs
06/: Cargo.toml
06/src/: part1.rs  part2.rs
07/: Cargo.toml
07/src/: part1.rs  part2.rs
08/: Cargo.toml
08/src/: part1.rs  part2.rs
09/: Cargo.toml
09/src/: part1.rs  part2.rs
10/: Cargo.toml
10/src/: part1.rs  part2.rs
11/: Cargo.toml
11/src/: part1.rs  part2.rs
12/: Cargo.toml
12/src/: part1.rs  part2.rs
13/: Cargo.toml
13/src/: part1.rs  part2.rs
14/: Cargo.toml
14/src/: part1.rs  part2.rs
15/: Cargo.toml
15/src/: part1.rs  part2.rs
16/: Cargo.toml
16/benches/: my_benchmark.rs
16/src/: part1.rs  part2.rs
17/: Cargo.toml
17/src/: part1.rs  part2.rs
18/: Cargo.toml
18/src/: part1.rs  part2.rs
19/: Cargo.toml
19/src/: part1.rs  part2.rs
20/: Cargo.toml
20/src/: part1.rs  part2.rs
21/: Cargo.toml
21/src/: part1.rs  part2.rs
