[package]
name = "aoc01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[[bin]]
name = "part2_unsafe"
path = "src/part2_unsafe.rs"

[[bin]]
name = "part2_unsafe_libc"
path = "src/part2_unsafe_libc.rs"
